--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_FIREBASE_PROJECT_ID="reactfirebaseauth-cd581"
 REACT_APP_FIREBASE_STORAGE_BUCKET="reactfirebaseauth-cd581.appspot.com"
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID="516999288220"
 REACT_APP_APP_ID="1:516999288220:web:3d2fb2b833001c0e636459"
+FAST_REFRESH=false
